Reliable override offset getter