@@ -5,7 +5,6 @@ import io.github.rothes.esu.core.util.ReflectionUtils.accessibleGetT
 import io.github.rothes.esu.core.util.ReflectionUtils.handle
 import sun.misc.Unsafe
 import java.lang.invoke.MethodHandle
-import java.lang.management.ManagementFactory
 import java.lang.reflect.Field
 import java.lang.reflect.Method
 import java.lang.reflect.Modifier
@@ -18,8 +17,9 @@ object UnsafeUtils {
     private val internalOffset = internalUnsafe.javaClass.getDeclaredMethod("objectFieldOffset", Field::class.java).handleOverride(pType = Any::class.java)
 
     fun Method.handleOverride(rType: Class<*> = returnType, pType: Class<*> = declaringClass, argTypes: Array<Class<*>> = parameterTypes): MethodHandle {
-        val newHeader = Runtime.version().version()[0] >= 24 && ManagementFactory.getRuntimeMXBean().inputArguments.contains("-XX:+UseCompactObjectHeaders")
-        val overrideOffset = if (newHeader) 8L else 12L
+        class TestOffset(private val firstField: Boolean = false)
+        @Suppress("DEPRECATION")
+        val overrideOffset = unsafe.objectFieldOffset(TestOffset::class.java.getDeclaredField("firstField"))
         val bool = unsafe.getBoolean(this, overrideOffset)
         try {
             unsafe.putBoolean(this, overrideOffset, true) // Make it accessible
